--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(untitled)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_EXE_LINKER_FLAGS "-static")
 
-add_executable(untitled main.cpp vec3.h color.h)
+add_executable(untitled main.cpp vec3.h color.h ray.h)
